--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
@@ -13,19 +13,73 @@
                             <th scope="col">Status</th>
                             <th scope="col">Logistic Name</th>
                             <th scope="col">Tracking No</th>
+                            <th scope="col">AWB File</th>
+                            <th scope="col">AWB Box</th>
                             <th scope="col">Created At</th>
                             <th scope="col">Updated By</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let logs of orderTrackingLogs">
-                            <td>{{logs?.ordertracking?.orderUniqueId ? logs?.ordertracking?.orderUniqueId : '-'}}</td>
-                            <td>{{logs?.ordertrackingstatus?.statusName ? (logs?.ordertrackingstatus?.statusName | titlecase) : '-'}}
+                            <td>
+                                {{
+									logs?.ordertracking?.orderUniqueId
+										? logs?.ordertracking?.orderUniqueId
+										: "-"
+								}}
                             </td>
-                            <td>{{logs?.logistic?.name ? logs?.logistic?.name : '-'}}</td>
-                            <td>{{logs?.trackingId ? logs?.trackingId : '-'}}</td>
-                            <td>{{logs?.createdAt ? (logs?.createdAt | date:'MMM d, y, h:mm a') : '-'}}</td>
-                            <td>{{logs?.stausChangedBy?.firstName}} {{logs?.stausChangedBy?.lastName}}</td>
+                            <td>
+                                {{
+									logs?.ordertrackingstatus?.statusName
+										? (logs?.ordertrackingstatus
+												?.statusName | titlecase)
+										: "-"
+								}}
+                            </td>
+                            <td>
+                                {{
+									logs?.logistic?.name
+										? logs?.logistic?.name
+										: "-"
+								}}
+                            </td>
+                            <td>
+                                {{ logs?.trackingId ? logs?.trackingId : "-" }}
+                            </td>
+                            <td>
+                                <div *ngIf="logs.uploadedAwbFile?.url; else elseBlock" class="d-inline-flex">
+                                    <div>{{
+										logs?.uploadedAwbFile?.originalname
+									}}</div>&nbsp;
+                                    <a href="{{ logs?.uploadedAwbFile?.url }}" target="_self" download="{{
+										logs?.uploadedAwbFile?.originalname
+									}}"><img src="assets/media/icons/_download.svg" alt="" width="14px" /></a>
+                                </div>
+                            </td>
+                            <td>
+                                <div *ngIf="logs.uploadedAwbBox?.url; else elseBlock" class="d-inline-flex">
+                                    <div> {{
+										logs?.uploadedAwbBox?.originalname
+									}}</div>&nbsp;
+                                    <a href="{{ logs?.uploadedAwbBox?.url }}" target="_self" download="{{
+										logs?.uploadedAwbBox?.originalname
+									}}"><img src="assets/media/icons/_download.svg" alt="" width="14px" /></a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-block">
+                                    <div>
+                                        {{logs?.createdAt ? (logs?.createdAt | date:'MMM d, y') : '-'}}
+                                    </div>
+                                    <div>
+                                        {{logs?.createdAt ? (logs?.createdAt | date:'h:mm a') : ''}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                {{ logs?.stausChangedBy?.firstName }}
+                                {{ logs?.stausChangedBy?.lastName }}
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -33,3 +87,7 @@
         </div>
     </div>
 </div>
+
+<ng-template #elseBlock>
+    -
+</ng-template>
