--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
@@ -18,7 +18,7 @@
         word-break: break-all;
     }
     .mat-column-loanAmount{
-        flex: 0 0 8% !important;
+        flex: 0 0 9% !important;
     }
     .mat-column-schemeName{
         flex: 0 0 9% !important;
@@ -31,7 +31,7 @@
         flex: 0 0 8% !important;
     }
     .mat-column-appraisalApproval{ 
-        flex: 0 0 11% !important;        
+        flex: 0 0 12% !important;        
     }
     .mat-column-bMApproval{ 
         flex: 0 0 8% !important;        
@@ -76,5 +76,8 @@
 		border-radius: 5px;
         padding: 5px;
         color: #f8b150 !important;
+    }
+    .cursor-not-allowed{
+		cursor: not-allowed !important;
 	}
 }
