--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -239,6 +239,113 @@
             </form>
           </div>
         </div>
+
+        <!-- Deposit Details -->
+        <div class="kt-portlet__body" *ngIf="filterName =='depositDetails'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-6">
+                      <label>By Payment Recieved Date</label>
+                      <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                        (click)="pickerStartDate.open()" formControlName="startDate">
+                      <mat-datepicker #pickerStartDate></mat-datepicker>
+                    </div>
+                    <div class="col-6">
+                      <label>By Payment Type</label>
+                      <ng-select [items]="tenure" [multiple]="true" bindLabel="paymentType" [selectableGroup]="true"
+                        [closeOnSelect]="false" bindValue="paymentTypeId" formControlName="multiSelect1">
+                        <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index">
+                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                            [ngModelOptions]="{ standalone : true }" />
+                          <!-- {{item.gender | uppercase}} -->
+                        </ng-template>
+                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
+                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                            [ngModelOptions]="{ standalone : true }" /> {{item.paymentType}}
+                        </ng-template>
+                        <ng-template ng-label-tmp>
+                          <span style="display:block; color: #000;" class="ng-placeholder">Select items</span>
+                        </ng-template>
+                      </ng-select>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <label>By Order Current Status</label>
+                      <ng-select [items]="status" [multiple]="true" bindLabel="statusName" [selectableGroup]="true"
+                        [closeOnSelect]="false" bindValue="statusId" formControlName="multiSelect2">
+                        <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index">
+                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                            [ngModelOptions]="{ standalone : true }" />
+                          <!-- {{item.gender | uppercase}} -->
+                        </ng-template>
+                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
+                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                            [ngModelOptions]="{ standalone : true }" /> {{item.statusName}}
+                        </ng-template>
+                        <ng-template ng-label-tmp>
+                          <span style="display:block; color: #000;" class="ng-placeholder">Select items</span>
+                        </ng-template>
+                      </ng-select>
+                    </div>
+                    <div class="col-6">
+                      <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <!-- Cancel Order Details -->
+        <div class="kt-portlet__body" *ngIf="filterName =='cancelOrderDetails'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-4">
+                      <label>By Payment Type</label>
+                      <ng-select [items]="tenure" [multiple]="true" bindLabel="paymentType" [selectableGroup]="true"
+                        [closeOnSelect]="false" bindValue="paymentTypeId" formControlName="multiSelect1">
+                        <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index">
+                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                            [ngModelOptions]="{ standalone : true }" />
+                          <!-- {{item.gender | uppercase}} -->
+                        </ng-template>
+                        <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
+                          <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                            [ngModelOptions]="{ standalone : true }" /> {{item.paymentType}}
+                        </ng-template>
+                        <ng-template ng-label-tmp>
+                          <span style="display:block; color: #000;" class="ng-placeholder">Select items</span>
+                        </ng-template>
+                      </ng-select>
+                    </div>
+                    <div class="col-4">
+                      <label>By Payment Recieved Date</label>
+                      <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                        (click)="pickerStartDate.open()" formControlName="startDate">
+                      <mat-datepicker #pickerStartDate></mat-datepicker>
+                    </div>
+                    <div class="col-4">
+                      <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
