role and permission

--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/internal-user-branch-list/internal-user-branch-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/internal-user-branch-list/internal-user-branch-list.component.scss
@@ -1,6 +1,7 @@
 :host{
     .mat-column-branchId{
         flex: 0 0 10% !important;
+        padding-left: 10px !important;
 
     }
     .mat-column-branchName{
