--- a/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.html
@@ -16,7 +16,7 @@
                                         <label class="text-color font-weight-bold">{{entity.entityName | titlecase}}</label>
                                     </div>
                                     <div class="col-1">
-                                        <mat-slide-toggle [checked]="entity.isSelected" (change)="toogleChange($event.checked,moduleIndex,entityIndex)"></mat-slide-toggle>
+                                        <mat-slide-toggle [checked]="checkForChecked(moduleIndex,entityIndex,entity)" (change)="toogleChange($event.checked,moduleIndex,entityIndex)"></mat-slide-toggle>
                                     </div>
                                     <div class="col-2" *ngFor="let action of entity.permission;index as permissionIndex" [class.offset-3]="(permissionIndex+1)%5 == 0">
                                         <label class="custom-checkbox">
