--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
@@ -95,9 +95,12 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div *ngxPermissionsOnly="['productEdit']" (click)="viewProduct(element)" class="kt-pointer"> View | &nbsp;</div>
-                            <div (click)="editProduct(element)" class="kt-pointer"> Edit | &nbsp;</div>
-                            <div class="kt-pointer text-danger" (click)="deleteProduct(element)">Delete</div>
+                            <div *ngxPermissionsOnly="['productView']" (click)="viewProduct(element)"
+                                class="kt-pointer"> View | &nbsp;</div>
+                            <div *ngxPermissionsOnly="['productEdit']" (click)="editProduct(element)"
+                                class="kt-pointer"> Edit | &nbsp;</div>
+                            <div *ngxPermissionsOnly="['productDelete']" (click)="deleteProduct(element)"
+                                class="kt-pointer text-danger">Delete</div>
                         </div>
                     </mat-cell>
                 </ng-container>
