Changes in html file for permission

--- a/gold-admin-frontend/src/app/views/pages/emi-management/logisticPartner/list-logistic-partner/list-logistic-partner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/logisticPartner/list-logistic-partner/list-logistic-partner.component.html
@@ -13,7 +13,9 @@
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div *ngxPermissionsOnly="['logisticPartnerEdit']" (click)="editRole(role)"
-                                class="kt-pointer"> Edit | &nbsp;</div>
+                                class="kt-pointer"> Edit</div>
+                            <div *ngxPermissionsOnly="['logisticPartnerEdit','logisticPartnerDelete']" class="px-1">|
+                            </div>
                             <div *ngxPermissionsOnly="['logisticPartnerDelete']" (click)="deleteRole(role)"
                                 class="kt-pointer text-danger">Delete</div>
                         </div>
