--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/cancel-order-details/cancel-order-details-list/cancel-order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/cancel-order-details/cancel-order-details-list/cancel-order-details-list.component.html
@@ -126,7 +126,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="printCancellationReceipt(element)" class="kt-pointer">Print Cancellation
+                            <div *ngxPermissionsOnly="['cancelOrderView']" (click)="printCancellationReceipt(element)"
+                                class="kt-pointer">Print Cancellation
                                 Receipt</div>
                         </div>
                     </mat-cell>
