--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-management/refund-management-list/refund-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-management/refund-management-list/refund-management.component.html
@@ -205,8 +205,11 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="viewRefund(element)" class="kt-pointer"> View | &nbsp;</div>
-                            <div (click)="editRefund(element)" class="kt-pointer"> Edit</div>
+                            <div *ngxPermissionsOnly="['refundDetailsView']" (click)="viewRefund(element)"
+                                class="kt-pointer"> View | &nbsp;</div>
+                            <div *ngxPermissionsOnly="['refundDetailsEdit']" class="px-1">|</div>
+                            <div *ngxPermissionsOnly="['refundDetailsEdit']" (click)="editRefund(element)"
+                                class="kt-pointer"> Edit</div>
                         </div>
                     </mat-cell>
                 </ng-container>
