--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
@@ -96,9 +96,11 @@
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div *ngxPermissionsOnly="['productView']" (click)="viewProduct(element)"
-                                class="kt-pointer"> View | &nbsp;</div>
+                                class="kt-pointer"> View</div>
+                            <div *ngxPermissionsOnly="['productEdit']" class="px-1">|</div>
                             <div *ngxPermissionsOnly="['productEdit']" (click)="editProduct(element)"
-                                class="kt-pointer"> Edit | &nbsp;</div>
+                                class="kt-pointer"> Edit</div>
+                            <div *ngxPermissionsOnly="['productDelete']" class="px-1">|</div>
                             <div *ngxPermissionsOnly="['productDelete']" (click)="deleteProduct(element)"
                                 class="kt-pointer text-danger">Delete</div>
                         </div>
