--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/sub-category/sub-category-list/sub-category-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/sub-category/sub-category-list/sub-category-list.component.html
@@ -58,7 +58,8 @@
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div *ngxPermissionsOnly="['sub-categoryEdit']" (click)="editSubCategory(element)"
-                                class="kt-pointer"> Edit | &nbsp;</div>
+                                class="kt-pointer"> Edit</div>
+                            <div *ngxPermissionsOnly="['sub-categoryEdit','sub-categoryDelete']" class="px-1">|</div>
                             <div *ngxPermissionsOnly="['sub-categoryDelete']" (click)="deleteSubCategory(element)"
                                 class="kt-pointer text-danger"> Delete </div>
                         </div>
