--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
@@ -111,8 +111,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="viewOrder(element)" class="kt-pointer"> View | &nbsp;</div>
-                            <div (click)="printCancellationReceipt(element)" class="kt-pointer">Print EMI Receipt</div>
+                            <div *ngxPermissionsOnly="['EMIDetailsView']" (click)="viewOrder(element)" class="kt-pointer"> View | &nbsp;</div>
+                            <div *ngxPermissionsOnly="['EMIDetailsView']" (click)="printCancellationReceipt(element)" class="kt-pointer">Print EMI Receipt</div>
                         </div>
                     </mat-cell>
                 </ng-container>
