--- a/gold-admin-frontend/src/app/views/pages/emi-management/reports/reports.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/reports/reports.component.html
@@ -41,8 +41,8 @@
                             <select class="form-control" formControlName="merchantId"
                                 [class.isError]="controls.merchantId.touched && controls.merchantId.invalid">
                                 <option value="" [selected]="true" [disabled]="true">Select Report</option>
-                                <option [value]="item.id" *ngFor="let item of reportTypes">
-                                    {{item.name | titlecase}}</option>
+                                <option [value]="item.id" *ngFor="let item of merchantName">
+                                    {{item.merchantName | titlecase}}</option>
                             </select>
                             <div *ngIf="controls.merchantId.touched && controls.merchantId.invalid">
                                 <mat-error *ngIf="controls.merchantId.touched && controls.merchantId.errors?.required">
@@ -73,7 +73,8 @@
                             <input type="text" class="form-control" [matDatepicker]="pickerEndDate"
                                 (click)="pickerEndDate.open()" formControlName="endDate"
                                 [class.isError]="controls.endDate.touched && controls.endDate.invalid" readonly
-                                placeholder="4/5/2020" [max]="minDate">
+                                placeholder="4/5/2020" [max]="minDate" [min]="controls.startDate.value"
+                                [disabled]="!controls.startDate.value">
                             <mat-datepicker #pickerEndDate></mat-datepicker>
                             <mat-error *ngIf="controls.endDate.errors?.required && controls.endDate.touched">
                                 Field is required
@@ -88,8 +89,8 @@
                             <select class="form-control" formControlName="statusId"
                                 [class.isError]="controls.statusId.touched && controls.statusId.invalid">
                                 <option value="" [selected]="true" [disabled]="true">Select Status</option>
-                                <option [value]="item.id" *ngFor="let item of reportTypes">
-                                    {{item.name | titlecase}}</option>
+                                <option [value]="item.statusId" *ngFor="let item of status">
+                                    {{item.statusName | titlecase}}</option>
                             </select>
                             <div *ngIf="controls.statusId.touched && controls.statusId.invalid">
                                 <mat-error *ngIf="controls.statusId.touched && controls.statusId.errors?.required">
