--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -212,7 +212,7 @@
             <div class="row justify-content-center">
                 <div class="col-7">
                     <div>
-                        <label for="" class="text-color font-weight-500">Processing Charges :-
+                        <label for="" class="text-color font-weight-500">Processing Charges -
                             {{controls.processingCharge.value}}</label>
                     </div>
                     <div class="table-div" id="print">
