--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
@@ -70,16 +70,23 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let loan">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div *ngIf="loan.loanStage.id == 1 || loan.loanStage.id ==2">
+                            <div *ngIf="loan.loanStage.id == 1 ">
                                 <div class="kt-pointer" class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected')
-                                        && roles == 'Branch Manager') || (loan.loanStatusForAppraiser == 'pending'
-                                          && roles == 'Appraiser')}"
+                                    <button (click)="editLoan(loan)"  [ngClass]="{'cursor-not-allowed':  !(loan.loanStatusForAppraiser == 'pending'
+                                    && this.roles == 'Appraiser')}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
-
+                            <div *ngIf="loan.loanStage.id == 2">
+                                <div class="kt-pointer" class="kt-pointer">
+                                    <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
+                                    <button (click)="editLoan(loan)"[ngClass]="{'cursor-not-allowed': !((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected')
+                                    && this.roles == 'Branch Manager' && loan.loanStatusForAppraiser == 'approved')}" 
+                                    
+                                        class="primary-button">{{loan.loanStage.name | uppercase}}</button>
+                                </div>
+                            </div>
                             <div *ngIf="loan.loanStage.id == 3">
                                 <div class="kt-pointer" class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
