--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -15,6 +15,21 @@
                 <form [formGroup]="fillingForm">
                     <div class="row kt-margin-b-15">
                         <div class="col-3">
+                            <p class="text-color font-weight-bold mandatory">Partner Name</p>
+                        </div>
+                        <div class="col-9">
+                            <select name="" id="" class="form-control" formControlName="partnerId"
+                                [class.isError]="fillingForm.get('partnerId').touched && fillingForm.get('partnerId').invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Partner</option>
+                                <option [value]="partner.id" *ngFor="let partner of partnerData">
+                                    {{partner.name | titlecase}}
+                                </option>
+                            </select>
+
+                        </div>
+                    </div>
+                    <div class="row kt-margin-b-15">
+                        <div class="col-3">
                             <p class="text-color font-weight-bold mandatory"> Scheme Name</p>
                         </div>
                         <div class="col-9">
@@ -110,13 +125,18 @@
                                 [class.isError]="fillingForm.get('interestRateOneHundredEightyDaysAnnually').touched && fillingForm.get('interestRateOneHundredEightyDaysAnnually').invalid">
                         </div>
                     </div> -->
+                    
+                </form>
+            </mat-tab>
+            <mat-tab label="By Uploading CSV">
+                <form [formGroup]="csvForm">
                     <div class="row kt-margin-t-20">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory">Select Partner Name</p>
+                            <label class="text-color font-weight-bold mandatory">Partner Name</label>
                         </div>
                         <div class="col-9">
                             <select name="" id="" class="form-control" formControlName="partnerId"
-                                [class.isError]="fillingForm.get('partnerId').touched && fillingForm.get('partnerId').invalid">
+                                [class.isError]="csvForm.get('partnerId').touched && csvForm.get('partnerId').invalid">
                                 <option value="" [selected]="true" [disabled]="true">Select Partner</option>
                                 <option [value]="partner.id" *ngFor="let partner of partnerData">
                                     {{partner.name | titlecase}}
@@ -125,13 +145,9 @@
 
                         </div>
                     </div>
-                </form>
-            </mat-tab>
-            <mat-tab label="By Uploading CSV">
-                <form [formGroup]="csvForm">
                     <div class="row kt-margin-t-20">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold">Upload CSV</p>
+                            <label class="text-color font-weight-bold mandatory">Upload CSV</label>
                         </div>
                         <div class="col-9">
                             <div class="input-group mb-3"
@@ -151,21 +167,7 @@
                             </label>
                         </div>
                     </div>
-                    <div class="row kt-margin-t-20">
-                        <div class="col-3">
-                            <p class="text-color font-weight-bold">Select Partner Name</p>
-                        </div>
-                        <div class="col-9">
-                            <select name="" id="" class="form-control" formControlName="partnerId"
-                                [class.isError]="csvForm.get('partnerId').touched && csvForm.get('partnerId').invalid">
-                                <option value="" [selected]="true" [disabled]="true">Select Partner</option>
-                                <option [value]="partner.id" *ngFor="let partner of partnerData">
-                                    {{partner.name | titlecase}}
-                                </option>
-                            </select>
-
-                        </div>
-                    </div>
+                   
                 </form>
             </mat-tab>
         </mat-tab-group>
